# wisp.place-monorepo

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  api.md  change-admin-password.ts  claude.md  components.json  crates.nix  create-admin.ts  flake.nix  package.json  tsconfig.json
.tangled/workflows/: deploy-wisp.yml  test.yml
apps/hosting-service/: .dockerignore  .gitignore  Dockerfile  package.json  tsconfig.json
apps/hosting-service/src/: index.ts  server.ts
apps/hosting-service/src/lib/: backfill.ts  db.ts  file-serving.ts  firehose.ts  html-rewriter.test.ts  html-rewriter.ts  page-generators.ts  request-utils.ts  site-cache.ts  utils.test.ts  utils.ts
apps/main-app/: package.json  tsconfig.json
apps/main-app/public/: index.html  index.tsx  robots.txt
apps/main-app/public/acceptable-use/: acceptable-use.tsx  index.html
apps/main-app/public/admin/: admin.tsx  index.html
apps/main-app/public/components/ui/: code-block.tsx  dialog.tsx  tabs.tsx
apps/main-app/public/editor/components/: TabSkeleton.tsx
apps/main-app/public/editor/hooks/: useSiteData.ts
apps/main-app/public/editor/tabs/: CLITab.tsx  DomainsTab.tsx  SitesTab.tsx  UploadTab.tsx
apps/main-app/public/lib/: api.ts
apps/main-app/public/onboarding/: onboarding.tsx
apps/main-app/public/styles/: global.css
apps/main-app/scripts/: create-admin.ts
apps/main-app/src/: index.ts
apps/main-app/src/lib/: csrf.test.ts  csrf.ts  db.test.ts  db.ts  dns-verification-worker.ts  dns-verify.ts  logger.ts  oauth-client.ts  slingshot-handle-resolver.ts  sync-sites.ts  upload-jobs.ts
apps/main-app/src/routes/: admin.ts  auth.ts  domain.ts  site.ts  user.ts  wisp.ts
binaries/: index.html
cli/: .gitignore  Cargo.toml  README.md  build-linux.sh  build-macos.sh  test_headers.rs
cli/src/: blob_map.rs  cid.rs  download.rs  main.rs  metadata.rs  mod.rs  place_wisp.rs  pull.rs  redirects.rs  serve.rs  subfs_utils.rs
cli/src/place_wisp/: fs.rs  settings.rs  subfs.rs
docs/: astro.config.mjs
docs/src/content/docs/: cli.md  deployment.md  index.mdx  redirects.md
docs/src/content/docs/lexicons/: index.md  place-wisp-domain.md  place-wisp-fs.md  place-wisp-subfs.md
docs/src/styles/: custom.css
hosting-service/: .env.example  Dockerfile  EXAMPLE.md  README.md  debug-settings.ts  docker-entrypoint.sh  example-_redirects  package.json  tsconfig.json
hosting-service/src/: index.ts  server.ts
hosting-service/src/lexicon/: lexicons.ts
hosting-service/src/lexicon/types/place/wisp/: fs.ts  subfs.ts
hosting-service/src/lib/: backfill.ts  cache.ts  db.ts  dns-verification-worker.ts  firehose.ts  html-rewriter.test.ts  html-rewriter.ts  observability.ts  redirects.test.ts  redirects.ts  safe-fetch.ts  types.ts  utils.ts
lexicons/: fs.json  settings.json  subfs.json
public/: index.html  index.tsx
public/admin/: index.html
public/components/ui/: button.tsx  code-block.tsx  radio-group.tsx  skeleton.tsx  tabs.tsx
public/editor/: editor.tsx  index.html
public/editor/hooks/: useDomainData.ts  useUserInfo.ts
public/editor/tabs/: CLITab.tsx  DomainsTab.tsx  SitesTab.tsx  UploadTab.tsx
public/layouts/: index.tsx
public/onboarding/: index.html  onboarding.tsx
public/styles/: global.css
scripts/: change-admin-password.ts  screenshot-sites.ts
src/: index.ts
src/lexicon/: lexicons.ts
src/lexicon/types/place/wisp/: fs.ts
src/lexicons/: index.ts  lexicons.ts
src/lexicons/types/place/wisp/: fs.ts  settings.ts
src/lib/: admin-auth.ts  constants.ts  db.test.ts  db.ts  dns-verification-worker.ts  dns-verify.ts  logger.ts  oauth-client.ts  observability.ts  slingshot-handle-resolver.ts  types.ts  upload-jobs.ts  wisp-auth.ts  wisp-utils.test.ts  wisp-utils.ts
src/routes/: admin.ts  auth.ts  domain.ts  site.ts  user.ts  wisp.ts
testDeploy/: index.html
