[package]
name = "wisp-cli"
version = "0.1.0"
edition = "2024"

[features]
default = ["place_wisp"]
place_wisp = []

[dependencies]
jacquard = { git = "https://tangled.org/@nonbinary.computer/jacquard", features = ["loopback"] }
jacquard-oauth = { git = "https://tangled.org/@nonbinary.computer/jacquard" }
jacquard-api = { git = "https://tangled.org/@nonbinary.computer/jacquard" }
jacquard-common = { git = "https://tangled.org/@nonbinary.computer/jacquard"  }
jacquard-identity = { git = "https://tangled.org/@nonbinary.computer/jacquard", features = ["dns"] }
jacquard-derive = { git = "https://tangled.org/@nonbinary.computer/jacquard"  }
jacquard-lexicon = { git = "https://tangled.org/@nonbinary.computer/jacquard"  }
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
miette = { version = "7.6.0", features = ["fancy"] }
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1.1"
#reqwest = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustversion = "1.0"
flate2 = "1.0"
base64 = "0.22"
walkdir = "2.5"
mime_guess = "2.0"
bytes = "1.10"
futures = "0.3.31"
