[package]
name = "wisp-cli"
version = "0.3.0"
edition = "2024"

[features]
default = ["place_wisp"]
place_wisp = []

[dependencies]
jacquard = { path = "/Users/regent/Developer/jacquard/crates/jacquard", features = ["loopback"] }
jacquard-oauth = { path = "/Users/regent/Developer/jacquard/crates/jacquard-oauth" }
jacquard-api = { path = "/Users/regent/Developer/jacquard/crates/jacquard-api", features = ["streaming"] }
jacquard-common = { path = "/Users/regent/Developer/jacquard/crates/jacquard-common", features = ["websocket"] }
jacquard-identity = { path = "/Users/regent/Developer/jacquard/crates/jacquard-identity", features = ["dns"] }
jacquard-derive = { path = "/Users/regent/Developer/jacquard/crates/jacquard-derive" }
jacquard-lexicon = { path = "/Users/regent/Developer/jacquard/crates/jacquard-lexicon" }
clap = { version = "4.5.51", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
miette = { version = "7.6.0", features = ["fancy"] }
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1.1"
#reqwest = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustversion = "1.0"
flate2 = "1.0"
base64 = "0.22"
walkdir = "2.5"
mime_guess = "2.0"
bytes = "1.10"
futures = "0.3.31"
multihash = "0.19.3"
multibase = "0.9"
sha2 = "0.10"
axum = "0.8.7"
tower-http = { version = "0.6.6", features = ["fs", "compression-gzip"] }
tower = "0.5.2"
n0-future = "0.3.1"
chrono = "0.4"
url = "2.5"
regex = "1.11"
